# libPWTShared

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_test.yml
pwtShared/: DaemonSettings.cpp  DaemonSettings.h  Utils.cpp  Utils.h  sharedExport.h
pwtShared/Include/: DaemonCMD.h  DaemonError.h  DynamicSystemInfo.h  Feature.h  Features.h  LogLevel.h  OSType.h  PacketError.h  SystemInfo.h
pwtShared/Include/CPU/: CPUVendor.h  CpuInfo.h
pwtShared/Include/CPU/AMD/: CPPCCapability1.h  CPPCRequest.h  PStateCurrentLimit.h
pwtShared/Include/CPU/Intel/: FIVRControlUV.h  HWPCapabilities.h  HWPRequest.h  HWPRequestPkg.h  MCHBARPkgRaplLimit.h  MiscProcFeatures.h  MiscPwrMgmt.h  PP1CurrentConfig.h  PkgCstConfigControl.h  PkgPowerLimit.h  PkgThermalStatusInfo.h  PowerCtl.h  TemperatureTarget.h  TurboPowerCurrentLimit.h  TurboRatioLimit.h  VRCurrentConfig.h
pwtShared/Include/Data/FAN/: FanData.h
pwtShared/Include/Data/OS/Linux/: LinuxAMDData.h  LinuxAMDGPUData.h  LinuxAMDThreadData.h  LinuxData.h  LinuxIntelGPUData.h  LinuxThreadData.h
pwtShared/Include/Data/OS/Windows/: WindowsData.h
pwtShared/Include/GPU/: GPUVendor.h  GpuInfo.h
pwtShared/Include/OS/Linux/: BlockDeviceQueSched.h  CPUFrequencyLimits.h  CPUScalingAvailableGovernors.h  MiscPMDevice.h
pwtShared/Include/OS/Linux/AMD/: AMDPStateData.h  GPUDPMForcePerfLevel.h  GPUODRanges.h
pwtShared/Include/OS/Linux/Intel/: GPURPSLimits.h
pwtShared/Include/OS/Windows/: PowerScheme.h  PowerSchemeSetting.h  PowerSchemeSettingData.h  PowerSchemesData.h  PowerSettingValue.h
pwtShared/Include/Packets/: ClientPacket.h  DaemonPacket.h  DeviceInfoPacket.h
pwtShared/Include/Types/: MinMax.h  ROData.h  RWData.h
pwtShared/Resources/: version.h.in
pwtShared/Resources/Windows/: win.rc.in
